# fastapi-ext

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
fastapi_ext/: utils.py
fastapi_ext/view/: __init__.py  _params.py  _routes.py  _utils.py  _view.py  decorators.py  view.py
fastapi_ext/view/decorators/: __init__.py  extra.py  modify.py  types.py
tests/: _api_extra.py  _api_view.py  _api_ws_view.py  _view.py  test_fastapi_view.py  test_view_api_extra.py  test_view_api_routes.py  test_view_api_ws.py
