[tool.poetry]
name = "fastapi-ext"
version = "0.2.1"
description = "FastAPI extensions focused on productivity"
authors = ["Damian Łukawski <damian@lukawscy.pl>"]
license = "MIT"
packages = [
    { include = "fastapi_ext" },
]

[tool.poetry.dependencies]
python = ">=3.7 <3.10"
fastapi = { version = ">=0.62.0" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
pytest = "^6.1.0"
coverage = "^5.4"

requests = "^2.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
